--- a/projects/cookie-service/package.json
+++ b/projects/cookie-service/package.json
@@ -1,6 +1,10 @@
 {
   "name": "cookie-service",
   "version": "0.0.1",
+  "author": {
+    "name": "Lionel Mukuna Ciowela",
+    "url": "https://twitter.com/liyokuna"
+  },
   "peerDependencies": {
     "@angular/common": "^7.2.0",
     "@angular/core": "^7.2.0"
