--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
+    "build-start":"ng build cookie-consent && npm run start",
     "e2e": "ng e2e"
   },
   "private": true,
