--- a/projects/cookie-service/package.json
+++ b/projects/cookie-service/package.json
@@ -7,6 +7,7 @@
   },
   "peerDependencies": {
     "@angular/common": "^7.2.0",
-    "@angular/core": "^7.2.0"
+    "@angular/core": "^7.2.0",
+    "boosted": "^4.3.1"
   }
 }
