--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,7 @@ install:
   - npm install
 
 script:
+  - npm test cookie-service
+  - npm build cookie-service
   - npm run test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
   - npm run e2e -- --protractor-config=e2e/protractor-ci.conf.js
