--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ install:
   - npm install
 
 script:
-  - npm test cookie-service -- --no-watch --no-progress --browsers=ChromeHeadlessCI
-  - npm build cookie-service -- --no-watch
-  - npm run test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
-  - npm run e2e -- --protractor-config=e2e/protractor-ci.conf.js
+  - npm build cookie-service 
+  - npm test cookie-service 
+  - npm run test
+  - npm run e2e
