adding cookie service banner

--- a/projects/cookie-service/package.json
+++ b/projects/cookie-service/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cookie-service",
-  "version": "1.0.0",
+  "name": "cookie-service-banner",
+  "version": "1.0.1",
   "author": {
     "name": "Lionel Mukuna Ciowela",
     "url": "https://twitter.com/liyokuna"
