--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "build-start":"ng build cookie-service && npm run start",
+    "build-start": "ng build cookie-service && npm run start",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.3.1"
+    "bootstrap": "^4.3.1",
+    "cookie-service-banner": "^1.0.1"
   },
   "devDependencies": {
     "@angular-devkit/build-ng-packagr": "~0.13.0",
