--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,5 @@ install:
   - npm install
 
 script:
-  - npm build cookie-service 
-  - npm test cookie-service 
-  - npm run test
-  - npm run e2e
+  - npm run test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
+  - npm run e2e -- --protractor-config=e2e/protractor-ci.conf.js
