--- a/.travis.yml
+++ b/.travis.yml
@@ -23,5 +23,5 @@ install:
   - npm install
 
 script:
-  - npm run test -- --no-watch --no-progress --browsers=ChromeHeadlessNoSandbox
-  - npm run e2e -- --protractor-config=e2e/protractor-ci.conf.js
+  - npm run test
+  - npm run e2e
