--- a/.travis.yml
+++ b/.travis.yml
@@ -23,5 +23,6 @@ install:
   - npm install
 
 script:
-  - npm run test
-  - npm run e2e
+  - npm run test cookie-service -- --no-watch --no-progress --browsers=ChromeHeadlessNoSandbox
+  - npm run test -- --no-watch --no-progress --browsers=ChromeHeadlessNoSandbox
+  - npm run e2e -- --protractor-config=e2e/protractor-ci.conf.js
