--- a/projects/cookie-service/package.json
+++ b/projects/cookie-service/package.json
@@ -1,9 +1,18 @@
 {
   "name": "cookie-service-banner",
-  "version": "1.0.2",
+  "version": "1.0.3",
+  "homepage": "https://cookie-conset-banner.netlify.com/",
+  "license": "MIT",
   "author": {
     "name": "Lionel Mukuna Ciowela",
     "url": "https://twitter.com/liyokuna"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/liyokuna/cookie-consent.git"
+  },
+  "bugs": {
+    "url": "https://github.com/liyokuna/cookie-consent/issues"
   },
   "peerDependencies": {
     "@angular/common": "^7.2.0",
