--- a/package.json
+++ b/package.json
@@ -64,5 +64,8 @@
     "tslint": "~5.11.0",
     "typescript": "~3.2.2",
     "zone.js": "~0.8.26"
-  }
+  },
+  "keywords": [
+    "angular","cookie", "bootstrap","typescript"
+  ]
 }
