--- a/projects/cookie-service/package.json
+++ b/projects/cookie-service/package.json
@@ -14,6 +14,9 @@
   "bugs": {
     "url": "https://github.com/liyokuna/cookie-consent/issues"
   },
+  "keywords": [
+    "angular","cookie", "bootstrap","typescript"
+  ],
   "peerDependencies": {
     "@angular/common": "^7.2.0",
     "@angular/core": "^7.2.0",
