adding cli in main project

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cookie-consent",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "homepage": "https://cookie-conset-banner.netlify.com/",
   "license": "MIT",
   "author": {
@@ -21,6 +21,11 @@
     "test": "ng test",
     "lint": "ng lint",
     "build-start": "ng build cookie-service && npm run start",
+    "copy-readme": "cpx ./README.md dist/cookie-service",
+    "test-lib": "ng test cookie-service",
+    "lint-lib": "ng lint cookie-service",
+    "build-lib": "ng build cookie-service",
+    "publish-lib": "npm run build-lib && npm run copy-readme && cd dist/cookie-service && npm publish",
     "e2e": "ng e2e"
   },
   "private": true,
@@ -48,6 +53,7 @@
     "bootstrap": "^4.3.1",
     "codelyzer": "~4.5.0",
     "core-js": "^2.5.4",
+    "cpx":"~1.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
@@ -66,6 +72,9 @@
     "zone.js": "~0.8.26"
   },
   "keywords": [
-    "angular","cookie", "bootstrap","typescript"
+    "angular",
+    "cookie",
+    "bootstrap",
+    "typescript"
   ]
 }
