--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,10 @@ cache:
 
 install:
   - npm install
+  - npm install codecov -g
+
+after_success:
+  - codecov
 
 script:
   - npm run test cookie-service -- --no-watch --no-progress --browsers=ChromeHeadless
