--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,10 @@ cache:
 
 install:
   - npm install
+  - npm install codecov -g
+
+after_success:
+  - codecov
 
 script:
   - npm run test cookie-service -- --no-watch --no-progress --browsers=ChromeHeadless
@@ -23,5 +27,5 @@ deploy:
   provider: npm
   email: "owner_mail"
   api_key: "NPM_AUTH_TOKEN"
-    on:
-    tags: true
+  on:
+  tags: true
