--- a/.travis.yml
+++ b/.travis.yml
@@ -22,11 +22,13 @@ after_success:
 script:
   - npm run test cookie-service -- --no-watch --no-progress --browsers=ChromeHeadless
   - npm run test -- --no-watch --no-progress --browsers=ChromeHeadless
+  - npm run build-lib
 
 deploy:
   provider: npm
   email: "owner_mail"
   api_key: "NPM_AUTH_TOKEN"
+  local_dir: dist/cookie-service
   on:
   tags: true
   all_branches: true
