--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cookie-consent",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "homepage": "https://cookie-conset-banner.netlify.com/",
   "license": "MIT",
   "author": {
@@ -25,6 +25,7 @@
     "test-lib": "ng test cookie-service",
     "lint-lib": "ng lint cookie-service",
     "build-lib": "ng build cookie-service",
+    "build-docs": "ng build --prod",
     "publish-lib": "npm run build-lib && cd dist/cookie-service && npm publish",
     "e2e": "ng e2e"
   },
@@ -36,22 +37,22 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
     "@angular-devkit/build-ng-packagr": "~0.13.0",
-    "@angular/animations": "~7.2.0",
+    "@angular/animations": "~8.2.2",
     "@angular/cli": "~7.3.8",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/compiler-cli": "~7.2.0",
-    "@angular/core": "~7.2.0",
-    "@angular/forms": "~7.2.0",
+    "@angular/common": "~8.2.2",
+    "@angular/compiler": "~8.2.2",
+    "@angular/compiler-cli": "~8.2.2",
+    "@angular/core": "~8.2.2",
+    "@angular/forms": "~8.2.2",
     "@angular/language-service": "~8.1.0",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
+    "@angular/platform-browser": "~8.2.2",
+    "@angular/platform-browser-dynamic": "~8.2.2",
+    "@angular/router": "~8.2.2",
     "@types/jasmine": "~3.3.13",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "bootstrap": "^4.3.1",
-    "codelyzer": "~4.5.0",
+    "codelyzer": "~5.0.0",
     "core-js": "^2.5.4",
     "cpx": "~1.5.0",
     "jasmine-core": "~2.99.1",
@@ -65,10 +66,10 @@
     "protractor": "~5.4.0",
     "rxjs": "~6.5.2",
     "ts-node": "~7.0.0",
-    "tsickle": ">=0.34.0",
+    "tsickle": ">=0.29.0",
     "tslib": "^1.9.0",
     "tslint": "~5.18.0",
-    "typescript": "~3.2.2",
+    "typescript": "~3.4.1",
     "zone.js": "~0.8.26"
   },
   "keywords": [
