--- a/.travis.yml
+++ b/.travis.yml
@@ -34,3 +34,18 @@ jobs:
         on:
         tags: true
         all_branches: true
+      - stage: Deploy docs
+        node_js: "10.9.0"
+        script:
+          - echo "Deploying to gh Page ..."
+          - npm run build-docs
+        deploy:
+          provider: pages
+          skip_cleanup: true
+          github_token: $GITHUB_TOKEN
+          keep_history: true
+          local_dir: dist/cookie-consent
+          fqdn: cookie-consent.com
+          on:
+            tags: true
+            branch: master
