--- a/.travis.yml
+++ b/.travis.yml
@@ -30,22 +30,22 @@ jobs:
         provider: npm
         email: "owner_mail"
         api_key: "NPM_AUTH_TOKEN"
-        deployment: dist/cookie-service
+        local_dir: dist/cookie-service
         on:
           tags: true
           all_branches: true
     - stage: Deploy docs
       node_js: "10.9.0"
       script:
-        - echo "Deploying to gh Page ..."
+        - echo "Deploying to gh Page..."
         - npm run build-docs
       deploy:
         provider: pages
         skip_cleanup: true
         github_token: $GITHUB_TOKEN
         keep_history: true
-        deployment: dist/cookie-consent
-        fqdn: cookie-consent.com
+        local_dir: dist/cookie-consent
+        fqdn: cookie-consent.org
         on:
           tags: true
           branch: master
