--- a/package.json
+++ b/package.json
@@ -32,45 +32,45 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "cookie-service-banner": "^1.0.5"
+    "cookie-service-banner": "^2.0.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular-devkit/build-ng-packagr": "~0.13.0",
-    "@angular/animations": "~8.2.2",
-    "@angular/cli": "~7.3.8",
-    "@angular/common": "~8.2.2",
-    "@angular/compiler": "~8.2.2",
-    "@angular/compiler-cli": "~8.2.2",
-    "@angular/core": "~8.2.2",
-    "@angular/forms": "~8.2.2",
-    "@angular/language-service": "~8.1.0",
-    "@angular/platform-browser": "~8.2.2",
-    "@angular/platform-browser-dynamic": "~8.2.2",
-    "@angular/router": "~8.2.2",
-    "@types/jasmine": "~3.3.13",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@angular-devkit/build-angular": "^0.803.9",
+    "@angular-devkit/build-ng-packagr": "^0.803.9",
+    "@angular/animations": "^8.2.10",
+    "@angular/cli": "^8.3.9",
+    "@angular/common": "^8.2.10",
+    "@angular/compiler": "^8.2.10",
+    "@angular/compiler-cli": "^8.2.10",
+    "@angular/core": "^8.2.10",
+    "@angular/forms": "^8.2.10",
+    "@angular/language-service": "^8.2.10",
+    "@angular/platform-browser": "^8.2.10",
+    "@angular/platform-browser-dynamic": "^8.2.10",
+    "@angular/router": "^8.2.10",
+    "@types/jasmine": "^3.4.4",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^12.7.12",
     "bootstrap": "^4.3.1",
-    "codelyzer": "~5.0.0",
-    "core-js": "^2.5.4",
+    "codelyzer": "^5.1.2",
+    "core-js": "^3.3.2",
     "cpx": "~1.5.0",
-    "jasmine-core": "~2.99.1",
+    "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~3.0.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^4.2.0",
+    "karma": "^4.3.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage-istanbul-reporter": "^2.1.0",
+    "karma-jasmine": "^2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "ng-packagr": "^5.7.0",
     "protractor": "~5.4.0",
-    "rxjs": "~6.5.2",
-    "ts-node": "~7.0.0",
-    "tsickle": ">=0.29.0",
-    "tslib": "^1.9.0",
-    "tslint": "~5.18.0",
-    "typescript": "~3.4.1",
-    "zone.js": "~0.8.26"
+    "rxjs": "^6.5.3",
+    "ts-node": "^8.4.1",
+    "tsickle": "^0.37.0",
+    "tslib": "^1.10.0",
+    "tslint": "^5.20.0",
+    "typescript": "~3.5.0",
+    "zone.js": "^0.10.2"
   },
   "keywords": [
     "angular",
