--- a/package.json
+++ b/package.json
@@ -32,11 +32,12 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "cookie-service-banner": "^2.0.1"
+    "cookie-service-banner": "^2.0.1",
+    "tslib": "^1.10.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.3",
-    "@angular-devkit/build-ng-packagr": "^0.901.3",
+    "@angular-devkit/build-angular": "~0.901.3",
+    "@angular-devkit/build-ng-packagr": "~0.901.3",
     "@angular/animations": "^9.1.3",
     "@angular/cli": "^9.1.3",
     "@angular/common": "^9.1.3",
@@ -50,9 +51,9 @@
     "@angular/router": "^9.1.3",
     "@types/jasmine": "^3.4.4",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^12.7.12",
+    "@types/node": "^12.11.1",
     "bootstrap": "^4.3.1",
-    "codelyzer": "~5.1.1",
+    "codelyzer": "^5.1.2",
     "core-js": "^3.3.2",
     "cpx": "~1.5.0",
     "jasmine-core": "^3.5.0",
@@ -62,15 +63,13 @@
     "karma-coverage-istanbul-reporter": "^2.1.0",
     "karma-jasmine": "^2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "ng-packagr": "^9.1.1",
+    "ng-packagr": "^9.0.0",
     "protractor": "~5.4.0",
     "rxjs": "^6.5.3",
     "ts-node": "^8.4.1",
-    "tsickle": "^0.38.1",
-    "tslib": "^1.10.0",
     "tslint": "^5.20.0",
     "typescript": "~3.8.3",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.10.2"
   },
   "keywords": [
     "angular",
