--- a/angular.json
+++ b/angular.json
@@ -151,13 +151,13 @@
           "options": {
             "tsConfig": "projects/cookie-service/tsconfig.lib.json",
             "project": "projects/cookie-service/ng-package.json"
-          }
-        ,          "configurations": {
+          },
+          "configurations": {
             "production": {
               "tsConfig": "projects/cookie-service/tsconfig.lib.prod.json"
             }
           }
-},
+        },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
@@ -182,5 +182,8 @@
       }
     }
   },
-  "defaultProject": "cookie-consent"
+  "defaultProject": "cookie-consent",
+  "cli": {
+    "analytics": false
+  }
 }
