--- a/package.json
+++ b/package.json
@@ -31,9 +31,8 @@
   },
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.3.1",
     "cookie-service-banner": "^2.0.1",
-    "tslib": "^1.10.0"
+    "tslib": "^1.11.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.3",
@@ -49,25 +48,25 @@
     "@angular/platform-browser": "^9.1.3",
     "@angular/platform-browser-dynamic": "^9.1.3",
     "@angular/router": "^9.1.3",
-    "@types/jasmine": "^3.4.4",
+    "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.11.1",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.4.1",
     "codelyzer": "^5.1.2",
-    "core-js": "^3.3.2",
+    "core-js": "^3.6.5",
     "cpx": "~1.5.0",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.3.0",
     "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage-istanbul-reporter": "^2.1.0",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "^2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
+    "karma-jasmine-html-reporter": "^1.5.3",
     "ng-packagr": "^9.0.0",
-    "protractor": "~5.4.0",
-    "rxjs": "^6.5.3",
-    "ts-node": "^8.4.1",
-    "tslint": "^5.20.0",
+    "protractor": "^5.4.4",
+    "rxjs": "^6.5.5",
+    "ts-node": "^8.9.1",
+    "tslint": "^6.1.1",
     "typescript": "~3.8.3",
     "zone.js": "~0.10.2"
   },
